cmake_minimum_required(VERSION 3.15)
project(Assignment6)

set(CMAKE_CXX_STANDARD 11)

add_executable(Assignment6 Account.cpp Account.h JollyBankMain.cpp JollyBankMain.h BSTree.cpp BSTree.h DepositMoney.cpp DepositMoney.h TransactionHistory.cpp TransactionHistory.h CreatAccount.cpp CreatAccount.h Transaction.cpp Transaction.h TransferMoney.cpp TransferMoney.h WithdrwmMoney.cpp WithdrwmMoney.h)